[workspace]
resolver = "2"

package.version = "0.1.2"

members = [
  "ndc-models",
  "ndc-reference",
  "ndc-test",
]

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# disable certain pedantic warnings
doc_markdown = { level = "allow" }
missing_errors_doc = { level = "allow" }
missing_panics_doc = { level = "allow" }
module_name_repetitions = { level = "allow" }
must_use_candidate = { level = "allow" }
return_self_not_must_use = { level = "allow" }
too_many_lines = { level = "allow" }
wildcard_imports = { level = "allow" }
# disable these for now, but we should probably fix them
needless_pass_by_value = { level = "allow" }
