[workspace]
resolver = "2"

package.version = "0.1.6"
package.edition = "2021"

members = [
  "ndc-models",
  "ndc-reference",
  "ndc-test",
]

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# disable certain pedantic warnings
doc_markdown = { level = "allow" }
missing_errors_doc = { level = "allow" }
missing_panics_doc = { level = "allow" }
module_name_repetitions = { level = "allow" }
must_use_candidate = { level = "allow" }
return_self_not_must_use = { level = "allow" }
too_many_lines = { level = "allow" }
wildcard_imports = { level = "allow" }
# disable these for now, but we should probably fix them
needless_pass_by_value = { level = "allow" }

[workspace.dependencies]
async-trait = "0.1"
axum = "0.6"
clap = "4"
colorful = "0.2"
goldenfile = "1"
indexmap = "2"
prometheus = "0.13"
rand = "0.8"
ref-cast = "1.0"
regex = "1"
reqwest = { version = "0.11", default-features = false }
schemars = "0.8"
semver = "1"
serde = "1"
serde_json = "1"
serde_with = "3"
smol_str = "0.1"
thiserror = "1"
tokio = "1"
tokio-test = "0.4"
url = "2"
