[package]
name = "ndc-models"
description = "Protocol definitions for the Hasura NDC specification"
version = "0.1.2"
edition = "2021"

[lints]
workspace = true

[dependencies]
indexmap = { version = "2.1.0", features = ["serde"] }
schemars = { version = "^0.8.15", features = ["indexmap2", "preserve_order", "smol_str"] }
serde = "^1.0"
serde_json = { version = "^1.0", features = ["preserve_order"] }
serde_with = "^2.3"

[dev-dependencies]
goldenfile = "^1.5.2"
