[package]
name = "ndc-models"
description = "Protocol definitions for the Hasura NDC specification"
version = "0.1.3"
edition = "2021"

[lints]
workspace = true

[dependencies]
indexmap = { version = "2", features = ["serde"] }
schemars = { version = "0.8", features = ["indexmap2", "preserve_order", "smol_str"] }
serde = "1"
serde_json = { version = "1", features = ["preserve_order"] }
serde_with = "3"

[dev-dependencies]
goldenfile = "1"
