[package]
name = "ndc-models"
description = "Protocol definitions for the Hasura NDC specification"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
indexmap = { workspace = true, features = ["serde"] }
ref-cast = { workspace = true }
schemars = { workspace = true, features = ["indexmap2", "preserve_order", "smol_str"] }
serde = { workspace = true }
serde_json = { workspace = true, features = ["preserve_order"] }
serde_with = { workspace = true }
smol_str = { workspace = true, features = ["serde"] }

[dev-dependencies]
goldenfile = { workspace = true }
