[package]
name = "ndc-reference"
version = "0.1.1"
edition = "2021"

[lints]
workspace = true

[[bin]]
name = "ndc-reference"
path = "bin/reference/main.rs"

[dependencies]
ndc-models = { path = "../ndc-models" }

axum = "^0.6.20"
indexmap = { version = "^2", features = ["serde"] }
prometheus = "^0.13.3"
regex = "^1.10.2"
serde_json = "^1.0.107"
tokio = { version = "^1.33.0", features = ["macros", "parking_lot", "rt-multi-thread", "signal"] }

[dev-dependencies]
ndc-test = { path = "../ndc-test" }

async-trait = "^0.1.74"
goldenfile = "^1.5.2"
tokio-test = "^0.4.3"
