[package]
name = "ndc-reference"
version = "0.1.2"
edition = "2021"

[lints]
workspace = true

[[bin]]
name = "ndc-reference"
path = "bin/reference/main.rs"

[dependencies]
ndc-models = { path = "../ndc-models" }

axum = "0.6"
indexmap = { version = "2", features = ["serde"] }
prometheus = "0.13"
regex = "1"
serde_json = "1"
tokio = { version = "1", features = ["macros", "parking_lot", "rt-multi-thread", "signal"] }

[dev-dependencies]
ndc-test = { path = "../ndc-test" }

async-trait = "0.1"
goldenfile = "1"
tokio-test = "0.4"
