[package]
name = "ndc-reference"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[[bin]]
name = "ndc-reference"
path = "bin/reference/main.rs"

[dependencies]
ndc-models = { path = "../ndc-models" }

axum = { workspace = true }
indexmap = { workspace = true, features = ["serde"] }
prometheus = { workspace = true }
regex = { workspace = true }
semver = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "parking_lot", "rt-multi-thread", "signal"] }
itertools = { workspace = true }

[dev-dependencies]
ndc-test = { path = "../ndc-test" }

async-trait = { workspace = true }
insta = { workspace = true }
tokio-test = { workspace = true }
