[package]
name = "ndc-test"
description = "A tool to verify that a data connector is somewhat compatible with the specification"
version = "0.1.1"
edition = "2021"

[dependencies]
ndc-models = { path = "../ndc-models" }

async-trait = "^0.1.74"
clap = { version = "^4", features = ["derive"] }
colorful = "0.2.2"
indexmap = { version = "^2", features = ["serde"] }
rand = { version = "^0.8.5", features = ["small_rng"] }
reqwest = { version = "^0.11", features = ["json", "multipart"], default-features = false }
semver = "^1.0.20"
serde = "^1.0.189"
serde_json = { version = "^1.0.107", features = ["preserve_order"] }
thiserror = "^1.0.50"
tokio = { version = "^1.33.0", features = ["macros", "rt-multi-thread", "parking_lot"] }
url = "^2.4"