[package]
name = "ndc-test"
description = "A tool to verify that a data connector is somewhat compatible with the specification"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[features]
default = ["native-tls"]

native-tls = ["reqwest/native-tls"]
rustls = ["reqwest/rustls"]

[dependencies]
ndc-models = { path = "../ndc-models" }

async-trait = { workspace = true }
clap = { workspace = true, features = ["derive"] }
colorful = { workspace = true }
indexmap = { workspace = true, features = ["serde"] }
rand = { workspace = true, features = ["small_rng"] }
reqwest = { workspace = true, features = ["json", "multipart"] }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, features = ["preserve_order"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "parking_lot"] }
url = { workspace = true }
